# worklife-oldschoolway

./: .gitignore  Dockerfile  LICENSE  Makefile  README-examinator.txt  README-senior.md  README.md  app.env  docker-compose.yml  install_prerequisiteforlocaltest.bat  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 27bf2aa3b8c7_first_migration.py
app/api/: __init__.py
app/api/routes/: employee.py  health.py  team.py  vacation.py
app/core/: config.py
app/db/: session.py
app/model/: __init__.py  base.py  employee.py  employee_team.py  employee_vacation.py  log.py
app/repository/: __init__.py  base.py  employee.py  team.py  vacation.py
app/schema/: __init__.py  base.py  employee.py  employee_team.py  employee_vacation.py
app/tool/: logger.py
scripts/: create_db.sql  t_apitest.py
